--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+        name: Run type checks
+        run: npm run typecheck
+
       - name: Run lint
         run: npm run lint
-
-      - name: Run type checks
-        run: npm run typecheck
 
       - name: Run tests
         run: npm test
