--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,24 @@
 // tsconfig.json
 {
   "compilerOptions": {
-    "allowJs": true,
-    "checkJs": true,
-    "noEmit": true,
-    "strict": true,
-    "esModuleInterop": true,
+    "target": "ES2020",
+    "module": "ESNext",
     "moduleResolution": "node",
-    "target": "ES2020"
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,    // don’t type‐check dependencies
+    "allowJs": true,         // permit .js inputs
+    "checkJs": false,        // but don’t check them
+    "noEmit": true           // we’re not outputting TS today
   },
-  "include": ["src/**/*.js", "tests/**/*.js"]
+  "include": [
+    // *only* TypeScript files go here; leave your .js out
+    "src/**/*.ts",
+    "tests/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "src/**/*.js",
+    "tests/**/*.js"
+  ]
 }
