--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,25 +7,39 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  test:
+    name: Run Tests
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Use Node.js 20
-        uses: actions/setup-node@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '16'
 
       - name: Install dependencies
         run: npm ci
 
-        name: Run type checks
-        run: npm run typecheck
-
-      - name: Run lint
-        run: npm run lint
-
       - name: Run tests
         run: npm test
+
+  typecheck:
+    name: Run TypeScript type checks
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run typechecks
+        run: npm run typecheck
