--- a/package.json
+++ b/package.json
@@ -40,12 +40,16 @@
     "axios": "^1.4.0"
   },
   "devDependencies": {
+    "@types/chai": "^5.2.2",
+    "@types/mocha": "^10.0.10",
+    "@types/sinon": "^17.0.4",
     "chai": "^4.5.0",
     "eslint": "^9.27.0",
     "husky": "^8.0.0",
     "lint-staged": "^16.0.0",
     "mocha": "^10.8.2",
     "prettier": "^3.5.3",
-    "sinon": "^15.2.0"
+    "sinon": "^15.2.0",
+    "typescript": "^5.8.3"
   }
 }
