chore: restrict lint-staged to src/**/*

--- a/package.json
+++ b/package.json
@@ -2,57 +2,37 @@
   "name": "tvo-helper-bot",
   "version": "0.1.0",
   "type": "module",
-  "main": "index.js",
   "scripts": {
     "prepare": "husky install",
     "deploy-commands": "node deploy-commands.js",
     "start": "node index.js",
     "test": "mocha \"tests/**/*.spec.js\"",
     "lint": "eslint \"src/**/*.{js,ts}\"",
-    "format": "prettier --write \"**/*.{js,ts,json,md}\"",
+    "format": "prettier --write \"src/**/*.{js,ts,json,md}\"",
     "typecheck": "tsc --noEmit",
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "src/**/*.{js,ts,json,md}": [
+    "src/**/*.{js,ts}": [
       "eslint --fix",
-      "prettier --write",
+      "prettier --write"
     ]
   },
-  "dependencies": {
-    "@discordjs/rest": "^2.5.0",
-    "config": "^3.3.12",
-    "deepl": "^1.0.13",
-    "discord-api-types": "^0.38.4",
-    "discord.js": "^14.19.3",
-    "dotenv": "^10.0.0",
-    "i18next": "^21.10.0",
-    "itranslator": "^3.0.6",
-    "mongoose": "^6.13.8",
-    "node-cron": "^3.0.3"
-  },
   "devDependencies": {
-    "@types/chai": "^5.2.2",
-    "@types/mocha": "^10.0.10",
-    "@types/sinon": "^17.0.4",
-    "chai": "^4.5.0",
-    "eslint": "^8.57.1",
+    "eslint": "^8.40.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.0",
-    "lint-staged": "^16.0.0",
-    "mocha": "^10.8.2",
-    "prettier": "^3.5.3",
-    "sinon": "^15.2.0",
-    "typescript": "^5.8.3"
+    "lint-staged": "^14.0.0",
+    "mocha": "^10.0.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.0.0"
   },
-  "overrides": {
-    "axios": "^1.4.0"
-  },
-  "description": "## Setup",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "discord.js": "^14.0.0",
+    "mongoose": "^7.0.0",
+    "node-fetch": "^3.0.0"
+  }
 }
