--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "format": "prettier --write \"src/**/*.{js,ts,json,md}\"",
     "typecheck": "tsc --noEmit"
   },
-
   "dependencies": {
     "discord.js": "^14.0.0",
     "mongoose": "^7.0.0",
     "node-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "chai": "^5.2.0",
     "eslint": "^8.40.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
@@ -25,6 +25,7 @@
     "husky": "^8.0.0",
     "mocha": "^10.0.0",
     "prettier": "^3.0.0",
+    "sinon": "^20.0.0",
     "typescript": "^5.0.0"
   }
 }
