--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "discord.js": "^14.0.0",
+    "dotenv": "^16.5.0",
     "mongoose": "^7.0.0",
     "node-fetch": "^3.0.0"
   },
